--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,8 @@
 							"./node_modules/leaflet/dist/leaflet.css"
 						],
 						"scripts": [
-							"node_modules/apexcharts/dist/apexcharts.min.js"
+							"node_modules/apexcharts/dist/apexcharts.min.js",
+							"node_modules/particles.js/particles.js"
 						]
 					},
 					"configurations": {
@@ -115,7 +116,8 @@
 							"./node_modules/leaflet/dist/leaflet.css"
 						],
 						"scripts": [
-							"node_modules/apexcharts/dist/apexcharts.min.js"
+							"node_modules/apexcharts/dist/apexcharts.min.js",
+							"node_modules/particles.js/particles.js"
 						]
 					}
 				}
